--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.2.20</version>
+    </dependency>
   </dependencies>
 
 
